--- a/app/globals.css
+++ b/app/globals.css
@@ -20,15 +20,20 @@
     appearance: none;
     width: 25px;
     height: 25px;
-    background: #04AA6D;
+    background: #f87171;
     cursor: pointer;
   }
   
   .slider::-moz-range-thumb {
     width: 25px;
     height: 25px;
-    background: #04AA6D;
+    background: #f87171;
     cursor: pointer;
+  }
+
+  .sample_svg #wrapper-svg {
+    width: 100% !important;
+    height: 100% !important;
   }
 
   @layer base {
