--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,7 @@
   .sample_svg > svg {
     width: 100% !important;
     height: 100% !important;
+    font-size: 2px !important;
   }
 
   @layer base {
